--- a/app/src/main/res/layout/activity_demo1.xml
+++ b/app/src/main/res/layout/activity_demo1.xml
@@ -38,12 +38,13 @@
             <ImageView
                 android:id="@+id/iv_cover"
                 android:layout_width="0dp"
-                android:layout_height="250dp"
+                android:layout_height="0dp"
+                android:maxHeight="250dp"
                 android:layout_margin="0dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/cover"
                 android:tint="#6F000000"
-                app:layout_constraintDimensionRatio="w,16:9"
+                app:layout_constraintDimensionRatio="16:9"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
